--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-stamps.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-stamps.html
@@ -12,6 +12,7 @@
 <link rel="import" href="stamps/alexandria-stamp-item-links.html">
 <link rel="import" href="stamps/alexandria-stamp-map.html">
 <link rel="import" href="stamps/alexandria-stamp-open-dialog-operation.html">
+<link rel="import" href="stamps/alexandria-stamp-open-external-dialog-operation.html">
 <link rel="import" href="stamps/alexandria-stamp-page.html">
 <link rel="import" href="stamps/alexandria-stamp-picture.html">
 <link rel="import" href="stamps/alexandria-stamp-preview-operation.html">
