--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-page.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-page.html
@@ -5,7 +5,7 @@
 <dom-module id="alexandria-stamp-page">
 
     <template>
-        <div id="page" class="page-layer" style$="height:[[stamp.height]];[[_style]]"></div>
+        <div id="page" class="page-layer" style$="height:[[stamp.heightPercent]];[[_style]]"></div>
     </template>
 
     <style>
