--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-picture.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-picture.html
@@ -54,6 +54,7 @@
             }
             :host .picture img {
                 width: 90%;
+                @apply(--alexandria-stamp-picture-image-mobile);
             }
         }
         @media screen and (max-width: 736px) {
@@ -62,6 +63,7 @@
             }
             :host .picture img {
                 width: 100%;
+                @apply(--alexandria-stamp-picture-image-mobile);
             }
         }
         @media screen and (max-width: 540px) {
@@ -70,6 +72,7 @@
             }
             :host .picture img {
                 width: 90%;
+                @apply(--alexandria-stamp-picture-image-mobile);
             }
         }
     </style>
