--- a/alexandria/activity-elements-activity/src/widgets/dialogs/alpaca.html
+++ b/alexandria/activity-elements-activity/src/widgets/dialogs/alpaca.html
@@ -63,9 +63,10 @@
         text-align: left;
     }
     .description {
-        font-size: 10pt;
+        font-size: 11pt;
         color: #727272;
-        margin-bottom: 15px;
+        padding: 10px;
+        font-weight: normal;
     }
     div.label { /* document and section input title */
         display: inline-block;
@@ -73,18 +74,19 @@
         margin-bottom: 5px;
         font-weight: 700;
     }
+    .dialog > .content {
+        height: calc(100% - 55px);
+        padding: 0 10px;
+        overflow: auto;
+    }
     .toolbar {
         border-top: 1px solid #ddd;
-        padding-top: 10px;
-        height: 50px;
+        padding: 10px 15px 0;
+        height: 55px;
     }
     .toolbar > div {
         float: right;
         margin-left: 10px;
-    }
-    .tabs {
-        overflow: auto;
-        height: calc(100% - 105px);
     }
     .tabs .inputs {
         margin: 10px;
