--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-export-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-export-operation.html
@@ -6,7 +6,7 @@
 <link rel="import" href="../../../../../lib/paper-item/paper-item.html">
 <link rel="import" href="alexandria-stamp-behavior.html">
 <link rel="import" href="../../alexandria-export-dialog.html">
-<link rel="import" href="../alexandria-operation-trigger.html">
+<link rel="import" href="../../alexandria-operation-trigger.html">
 
 <dom-module id="alexandria-stamp-export-operation">
 
