--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-dialog-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-dialog-operation.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../../../../lib/polymer/polymer.html">
 <link rel="import" href="alexandria-stamp-behavior.html">
-<link rel="import" href="../alexandria-operation-trigger.html">
+<link rel="import" href="../../alexandria-operation-trigger.html">
 
 <dom-module id="alexandria-stamp-open-dialog-operation">
 
