--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-task-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-task-operation.html
@@ -3,7 +3,7 @@
 <link rel="import" href="../../../../../lib/paper-dialog/paper-dialog.html">
 <link rel="import" href="../../../../../lib/paper-button/paper-button.html">
 <link rel="import" href="alexandria-stamp-behavior.html">
-<link rel="import" href="../alexandria-operation-trigger.html">
+<link rel="import" href="../../alexandria-operation-trigger.html">
 
 <dom-module id="alexandria-stamp-task-operation">
 
