--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-catalog-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-catalog-operation.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../../../../../lib/paper-dialog/paper-dialog.html">
 <link rel="import" href="../../../../../lib/iron-resizable/iron-resizable-behavior.html">
 <link rel="import" href="alexandria-stamp-behavior.html">
-<link rel="import" href="../alexandria-operation-trigger.html">
+<link rel="import" href="../../alexandria-operation-trigger.html">
 
 <dom-module id="alexandria-stamp-open-dialog-operation">
 
