--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-preview-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-preview-operation.html
@@ -8,7 +8,7 @@
 <link rel="import" href="../../../../../lib/pdf-browser-viewer/pdf-browser-viewer.html">
 <link rel="import" href="../../../../../lib/iron-resizable-behavior/iron-resizable-behavior.html">
 <link rel="import" href="alexandria-stamp-behavior.html">
-<link rel="import" href="../alexandria-operation-trigger.html">
+<link rel="import" href="../../alexandria-operation-trigger.html">
 
 <dom-module id="alexandria-stamp-preview-operation">
 
